2007-10-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nytimes.el (shimbun-nytimes-clear-contents): Extract contents from
	a page composed in unusual format.  cf. http://dealbook.blogs.nytimes.\
	com/2007/10/24/3000-layoffs-today-more-tomorrow/index.html?ex=13510512\
	00&en=07a270b9f7c0bb04&ei=5088&partner=rssnyt&emc=rss

	* sb-itmedia.el (shimbun-get-headers): Update regexp.
	(shimbun-clear-contents): Don't use too complicated regexp wasting cpu.

2007-10-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nytimes.el (shimbun-nytimes-next-url): New variable.
	(shimbun-make-contents): Reset it before fetching contents.
	(shimbun-multi-next-url): Set it to the next url.
	(shimbun-nytimes-clear-contents): New function.
	(shimbun-clear-contents): Use it; retry fetching contents if it fails.

2007-10-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-itmedia.el (shimbun-clear-contents): Break line after images.

2007-10-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* *.el: Fix expressions of copyright notices.

2007-10-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nytimes.el (shimbun-clear-contents): Update regexp; remove useless
	tag.

2007-10-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-tech-on.el: Add coding cookie.
	(shimbun-multi-clear-contents): Remove tags that likely cause a newline
	preceding a page.
	(shimbun-clear-contents): Remove useless tags; insert line-break
	between text and image.

	* sb-itmedia.el (shimbun-multi-clear-contents): Remove tags that likely
	cause a newline preceding a page.

	* sb-nytimes.el (shimbun-clear-contents): Don't remove </blockquote> at
	the end of article; improve the way to remove next/prev buttons.

2007-10-12  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* sb-chalow.el: Removed by the bug report [emacs-w3m:09688].

2007-10-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kantei.el (shimbun-get-headers): Update regexp for m-magazine-ja.

2007-10-10  Katsumi Yamaoka  <yamaoka@jpl.org>
